syntax = "proto3";
//package test;

import "Solidity.proto";

message TaskList {
    enum ProgressType {
        None = 0;
        Start = 12;
        Done = 34;
    }
    message Task {
        uint64 due_date = 1;
        message Progress {
            .solidity.int16 step = 1;
            ProgressType prog_type = 2;
        }
        repeated Progress progresses = 2;
    }
    message UrgentTask {
        string explanation = 1;        
        uint32 priority = 2;
        map<uint32, string> messages = 3;
    }
    .solidity.address id = 1;
    repeated Task tasks = 2;
    map<string, UrgentTask> urgents = 3;
    map<string, UrgentTask> urgents2 = 4;
}


message Rewards {
    repeated .solidity.uint256 id = 1;
    fixed64 f1 = 2;
    repeated TaskList.Task f2 = 3;
    repeated sfixed64 f3 = 4;
    .solidity.int128 f4 = 5;
    map<string, TaskList.UrgentTask> f5 = 7;
}
